--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,3 +16,29 @@ $font-family-sans-serif: Gotham;
 .btn.btn-primary {
   color: white;
 }
+
+.highlight {
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  // margin-top: 1rem;
+  // margin-bottom: 1rem;
+  background-color: #f8f9fa;
+  // -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.highlight pre {
+  margin-bottom: 0;
+}
+
+.CodeSandbox {
+  textarea {
+    width: 100%;
+    height: 200px;
+  }
+
+  pre {
+    white-space: pre-wrap; 
+  }
+}
+
