Add of 2 courses

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,7 +23,7 @@ $font-family-sans-serif: Gotham;
   border-radius: 3px;
   // margin-top: 1rem;
   // margin-bottom: 1rem;
-  background-color: #f8f9fa;
+  // background-color: #f8f9fa;
   // -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
