--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@ $font-family-sans-serif: Gotham;
 
 @import 'bootstrap/scss/bootstrap';
 @import './font.scss';
+@import './prism.css'; // More themes here: https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+clike+javascript
 
 $navbar-height: 60px;
 
