--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,3 @@
-
 $primary: #2DC5FA; // Electric Blue
 $secondary: #2D354C; // Dark Blue
 $success: #77C0BC; // Light Green
@@ -7,15 +6,11 @@ $warning: #FDD35B; // Light Yellow
 $danger: #F27471; // Indian Red
 // $light
 // $dark
-
 $font-family-sans-serif: Gotham;
-
 @import 'bootstrap/scss/bootstrap';
 @import './font.scss';
 @import './prism.css'; // More themes here: https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+clike+javascript
-
 $navbar-height: 60px;
-
 
 .btn.btn-primary {
   color: white;
@@ -42,24 +37,29 @@ $navbar-height: 60px;
   }
 
   pre {
-    white-space: pre-wrap; 
+    white-space: pre-wrap;
   }
 }
 
 .App {
-  .navbar {
-    height: $navbar-height!important;
-    position: fixed;
-    z-index: 90;
-    width: 100%;
-
-    .nav-link {
-      color: rgba(255, 255, 255, 0.8);
-    }
-  }
-
-  .after-navbar {
+  .navbar-wrapper {
     height: $navbar-height;
+
+    .navbar {
+      // height: 100%;
+      min-height: $navbar-height !important;
+      position: fixed;
+      z-index: 90;
+      width: 100%;
+
+      .navbar-brand {
+        max-width: 50%;
+      }
+
+      .nav-link {
+        color: rgba(255, 255, 255, 0.8);
+      }
+    }
   }
 }
 
@@ -67,8 +67,6 @@ $navbar-height: 60px;
   display: flex;
   width: 100%;
   align-items: stretch;
-
-
 
   .sidebar {
     min-width: 250px;
@@ -87,7 +85,6 @@ $navbar-height: 60px;
       display: none;
     }
 
-
     ul li {
       padding-bottom: 0.5rem;
 
@@ -96,8 +93,6 @@ $navbar-height: 60px;
       }
     }
   }
-
-
 
   .content {
     padding-top: 1rem;
@@ -110,7 +105,5 @@ $navbar-height: 60px;
     @media screen and (max-width: 900px) {
       margin-left: auto;
     }
-
   }
-
 }
