--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 $primary: #2DC5FA; // Electric Blue
 $secondary: #2D354C; // Dark Blue
-$success: #77C0BC; // Light Green
+// $success: #77C0BC; // Light Green
+$success: #53b0ab;
 $info: #B064EA; // Bright Purple
 $warning: #FDD35B; // Light Yellow
 $danger: #F27471; // Indian Red
@@ -40,7 +41,8 @@ $navbar-height: 60px;
   }
 
   h3 {
-    font-size: 1.75rem !important;
+    font-size: 1.5rem !important;
+    color: $primary;
   }
 }
 
@@ -74,6 +76,55 @@ $navbar-height: 60px;
         color: rgba(255, 255, 255, 0.8);
       }
     }
+  }
+}
+
+.Home {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: calc(100vh - 60px);
+    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url(/images/home-bg.jpg);
+    // filter: blur(3px);
+    background-size: cover;
+    background-position: center;
+    color: white;
+
+    h1 {
+      margin: 20px;
+      font-size: 3em;
+    }
+    
+    
+    .properties {
+      margin: 40px 0;
+      padding: 0;
+      // display: flex;
+      // justify-content: space-around;
+      // flex-wrap: wrap;
+      div {
+        margin: 10px 0;
+        text-transform: uppercase;
+        font-size: 1.5em;
+      }
+    }
+  }
+  section {
+    margin-top: 100px;
+    margin-bottom: 200px;
+    font-size: 1.2em;
+
+    h2 {
+      font-size: 2em;
+      color: $primary;
+      text-transform: capitalize;
+      margin-bottom: 50px;
+    }
+  }
+  .img-instructor {
+    border-radius: 150px;
+    max-height: 300px;
   }
 }
 
